Did align icons upgrade And started to do dropdown upgrade Also fixed button what makes links

--- a/css/main.css
+++ b/css/main.css
@@ -225,8 +225,8 @@ body {
 .dropdown-size {
   width: 6.8rem;
   background-color: #ffffff;
-  /* border: #ae81ff 1px solid; */
-  left: calc(var(--font-left) + 9.5vw);
+  border: #ae81ff 1px solid;
+  left: calc(var(--font-left) + 13vw);
 }
 
 .picker-item:hover {
